--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
-body {
+body, html {
     background-color: #E63733;
+    height: 100%;
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    overflow: hidden; /* Ensure there's no scroll */
 }
 
-img {
-    width: 50%;          /* Reducing the size to 50% */
-    max-width: 100%;     /* This ensures the image never exceeds its container or the viewport width */
-    height: auto;        /* To maintain the aspect ratio of the image */
+.logo-container img {
+    width: 600pt;       /* Setting the width */
+    height: 600pt;      /* Setting the height */
+    display: block;     /* To remove any extra space around the image */
+    margin: auto;       /* Centering the image in its container */
 }
