fixing links position

--- a/style.css
+++ b/style.css
@@ -28,19 +28,14 @@ img {
     font-size: 15pt;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: fit-content;
-    position: relative;
+    justify-content: center;
 }
 
 .divider {
-    position: absolute;
-    top: 50%; 
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: 0 10px;
 }
 
-.links a, .links span {
+.links a {
     color: white;
     text-decoration: none;
     margin: 0 10px;
