--- a/style.css
+++ b/style.css
@@ -7,8 +7,12 @@ body, html {
     align-items: center;
     justify-content: center;
     color: white;
+}
+
+body.pp-container {
     height: auto;
 }
+
 
 .content {
     display: flex;
